# feed-bot

./: LICENSE  README.md  config.ini  main.py  pyproject.toml  requirements.txt  sql.py
aiogram_bot/: handlers.py  kb.py  main.py  states.py  text.py  utils.py
telephon_bot/: main.py  utils.py
