[tool.poetry]
name = "feed-bot"
version = "0.1.0"
description = ""
authors = ["DekkoBraze <greende556@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"
telethon = "^1.33.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
